Fix spacing in markup

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ main {
   padding-top: 2rem;
 
   flex: 1;
-  padding-block: 4rem;
+  padding-block: 2rem;
 }
 
 
@@ -69,6 +69,8 @@ main {
   background: white;
   padding: 1rem;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+
+  margin-bottom: 1rem;
 }
 
 .img-container img {
